# nixR

./: .gitignore  2024-10-29_bioc_software.txt  2024-10-30_bioc_software.txt  2024-10-30_cran.txt  2025-10-30_bioc_software.txt  2025-10-30_cran.txt  Cargo.toml  LICENSE  README.md  blockers.py  build_date.sh  build_debugset.sh  dump_source.py  flake.nix  loop_date.sh  loop_debug_build.sh  todo.txt
data/bioconductor_3.6/: archive_packages.json  archives.json
nix/: README.md  flake.nix  out.txt  result  t.txt  watch.txt
nix/patches/: DOSE_3.28.patch  DeepBlueR.patch  GeneBook.patch  HDO.db_0.99.patch  HPO.db_0.99.patch  MACPET.patch  MPO.db_0.99.patch  MSGFplus_1.28.0.patch  RKEELJARS_1.0.20.patch  RKEELjars.patch  RNetCDF_2.8-1.patch  Rbwa_1.2.0.patch  Rbwa_1.4.0.patch  Rbwa_1.8.0.patch  ReactomeContentService4R.patch  Rhisat2.patch  Rhisat2_1.16.0.patch  Rnifti_1.4.0_zlib_objects.patch  SICTools_1.30.0.patch  SharedObject.patch  SharedObject_1.4.0.patch  affxparser_1.66.patch  avidaR.patch  cgalMeshes_2.0.0.patch  commonsMath.patch  dmdScheme.patch  (+49 more)
nixR_builder/: Cargo.toml  loop_build_upon_change.sh
nix_output/: bioc_data_annotation.nix  bioc_data_experiment.nix  bioc_software.nix  cran.nix  r_by_date.nix
overrides/: blacklist.txt  dates.json  dates.toml  derivation_args.toml  extra_dates.toml  final_archive_dates.toml  input_blacklist.toml  input_blacklist.txt  nixpkgs.toml  output_blacklist.toml  output_blacklist.txt  package_dates.toml  system_requirements.toml
src/: dates.rs  desc_parser.rs  helpers.rs  lib.rs  main.rs  nix_output.rs  retrieval.rs
(+285 files in other folders)
