[package]
name = "nix_r_updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.5.0"
sha256 = "1.0.2"
regex = "1"
chrono = {version = "0.4", features =["serde"]}
ex = "0.1.3"
anyhow = {version="1.0.44", features=["backtrace"]}
itertools="0.10"
serde = {version="1.0.130", features = ["derive"]}
serde_json = "1.0"
stderrlog = "0.5.1"
clap = "2.33"
log = "0.4.14"
lazy-regex = "2.3.0"
glob = "0.3.0"
rayon = "1.5.3"
once_cell = "1.15.0"
pathdiff = "0.2.1"
yaml-rust = { version = "0.5", package = "yaml-rust-davvid" }
flate2 = "1.0"
nested_intervals = "0.2.2"
diligent-date-parser = "0.1.3"
